@@ -1,3 +1,9 @@
+AP-2007-12-05-0: Bugfix:      arco_read should be able to create synonyms 
+                              instead of arco_write
+                 Bugster:     6565635
+                 Issue:       2282
+                 Review:      JO
+
 JG-2007-11-26-0: CVS          Created V61u3_TAG
 -----------------------------------------------
 
